--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,23 +11,23 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
-    container:
-      image: emscripten/emsdk:3.1.57
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Build WebAssembly bundle
+      - name: Build static site
         run: make build
 
       - name: Verify build output
         run: |
-          test -s dist/game.js
-          test -s dist/game.wasm
+          test -s dist/index.html
+          test -s dist/main.js
+          test -s dist/styles.css
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: wasm-build
+          name: static-site
           path: dist
           if-no-files-found: error
